html image link update

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -19,7 +19,7 @@
                 target="_blank"
                 class="project-tile"
                 >
-                <img class="project-image" src="Tribute page.PNG"/>
+                <img class="project-image" src="https://raw.githubusercontent.com/silDavid/Personal-portfolio/master/Tribute%20page.PNG"/>
                 <p class="project-title">Tribute Page</p>
             </a>
             <a 
@@ -27,7 +27,7 @@
                 target="_blank"
                 class="project-tile"
                 >
-                <img class="project-image" src="Beer survey.PNG" />
+                <img class="project-image" src="https://raw.githubusercontent.com/silDavid/Personal-portfolio/master/Beer%20survey.PNG" />
                 <p class="project-title">Survey Form</p>
             </a>
             <a 
@@ -35,7 +35,7 @@
                 target="_blank"
                 class="project-tile"
                 >
-                <img class="project-image" src="Product page.PNG"/>
+                <img class="project-image" src="https://raw.githubusercontent.com/silDavid/Personal-portfolio/master/Product%20page.PNG"/>
                 <p class="project-title">Product Landing Page</p>
             </a>
             <a 
@@ -43,7 +43,7 @@
                 target="_blank"
                 class="project-tile"
                 >
-                <img class="project-image" src="Technical doc.PNG"/>
+                <img class="project-image" src="https://raw.githubusercontent.com/silDavid/Personal-portfolio/master/Technical%20doc.PNG"/>
                 <p class="project-title">Technical Documentation Page</p>
             </a>
         </div>
