--- a/index.html
+++ b/index.html
@@ -148,4 +148,4 @@
     <p class="m-0"><i class="far fa-copyright"></i> Created by David Silaghi</p>
 </footer>
 
-<link rel="stylesheet" href="Portfolio.css">
+<link rel="stylesheet" href="index.css">
