projects/ animation/ web responsiveness - update

--- a/index.html
+++ b/index.html
@@ -42,20 +42,21 @@
             </div>
             <div class="project-card">
                 <a 
+                    href="https://sildavid.github.io/Product-landing-page/"
+                    target="_blank"
+                    >
+                    <img class="project-image" src="./projects-wallpapers/Product page.PNG"/>
+                    <p class="project-title project-title--blur">Product Landing Page</p>
+                </a>
+            </div>
+
+            <div class="project-card">
+                <a 
                     href="https://codepen.io/david-silaghi/pen/pogNXgN"
                     target="_blank"
                     >
                     <img class="project-image" src="./projects-wallpapers/Tribute page.PNG"/>
                     <p class="project-title project-title--blur">Tribute Page</p>
-                </a>
-            </div>
-            <div class="project-card">
-                <a 
-                    href="https://codepen.io/david-silaghi/pen/wvGGWWZ"
-                    target="_blank"
-                    >
-                    <img class="project-image" src="./projects-wallpapers/Product page.PNG"/>
-                    <p class="project-title project-title--blur">Product Landing Page</p>
                 </a>
             </div>
             <div class="project-card">
@@ -108,10 +109,10 @@
             <div class="contact-info">
                 <a
                     id="profile-link"
-                    href="https://www.facebook.com/david.silaghi/"
+                    href="https://github.com/silDavid"
                     target="_blank"
                     >
-                    <i class="fab fa-facebook-square"></i>Facebook
+                    <i class="fab fa-github"></i>GitHub
                 </a>
             </div>
             <div class="contact-info">
@@ -124,18 +125,9 @@
                 </a>
             </div>
             <div class="contact-info">
-                <a
-                    id="profile-link"
-                    href="https://github.com/silDavid"
-                    target="_blank"
-                    >
-                    <i class="fab fa-github"></i>GitHub
-                </a>
-            </div>
-            <div class="contact-info">
                 <a  
                     id="profile-link"
-                    href="mailto:example@example.com" 
+                    href="david.silaghi1507@gmail.com" 
                     >
                     <i class="fas fa-at"></i>Mail
                 </a>
